# Career_Accelerator

./: README.md  app.py  crewai.json  pyproject.toml  report.md  requirements.txt
src/newgroq/: crew.py  main.py
src/newgroq/config/: agents.yaml  tasks.yaml
