[project]
name = "newgroq"
version = "0.1.0"
description = "newgroq using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0"
]

[project.scripts]
newgroq = "newgroq.main:run"
run_crew = "newgroq.main:run"
train = "newgroq.main:train"
replay = "newgroq.main:replay"
test = "newgroq.main:test"
run_with_trigger = "newgroq.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
